# conforme-digitale-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  RELEASE_v0.2.0.md  conforme.config.example.json  package-lock.json  package.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-npm.yml  publish-pypi.yml  release-windows-exe.yml
docs/: getting-started-it.md  normativa-e-sanzioni.md  per-clienti-non-tecnici.md  pubblicazione.md  roadmap.md  sostieni-il-progetto.md
examples/: sample-good.html  sample.html
python-app/: .gitignore  README.md  build_exe.ps1  pyproject.toml  requirements-dev.txt
python-app/conforme_toolkit/: __init__.py  audit.py  cli.py  gui.py  service.py
python-app/tests/: run_tests.py
src/: audit.js  cli.js  report-md.js  run-audit.js  setup.js
tests/: run.js
